Updated list item to present more data

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="side_margins">8dp</dimen>
+    <dimen name="repo_item_text_width">200dp</dimen>
 </resources>
