--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/avatar_image_view"
-        app:srcCompat="@drawable/ic_action_name" />
+        app:srcCompat="@drawable/ic_fork" />
 
     <TextView
         android:id="@+id/forks_count_text_view"
