Persistence for presenters is added

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="side_margins">8dp</dimen>
     <dimen name="repo_item_text_width">200dp</dimen>
+    <dimen name="avatar_image_size">100dp</dimen>
 </resources>
