--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_data_available" />
+        android:text="@string/click_to_load" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
