--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -55,7 +55,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/empty_view"
+        android:id="@+id/empty_view_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
