--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
-        android:id="@+id/empty_view"
+        android:id="@+id/empty_view_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
